--- a/about.html
+++ b/about.html
@@ -12,10 +12,10 @@
 </div>
 
 <div class="nav">
-    <li><a href="index.html"><strong>Home</strong></a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="news.html">News</a></li>
     <li><a href="contact.html">Contact</a></li>
-    <li><a href="about.html">About</a></li>
+    <li><a href="about.html"><strong>About</strong></a></li>
 </div>
 
 <div class="content">
