--- a/news.html
+++ b/news.html
@@ -12,8 +12,8 @@
 </div>
 
 <div class="nav">
-    <li><a href="index.html"><strong>Home</strong></a></li>
-    <li><a href="news.html">News</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="news.html"><strong>News</strong>></a></li>
     <li><a href="contact.html">Contact</a></li>
     <li><a href="about.html">About</a></li>
 </div>
