--- a/news.html
+++ b/news.html
@@ -13,7 +13,7 @@
 
 <div class="nav">
     <li><a href="index.html">Home</a></li>
-    <li><a href="news.html"><strong>News</strong>></a></li>
+    <li><a href="news.html"><strong>News</strong></a></li>
     <li><a href="contact.html">Contact</a></li>
     <li><a href="about.html">About</a></li>
 </div>
