--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>This is Ophelias website</title>
+    <title>Ophelias Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
