--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>This is Ophelias website</title>
+    <title>Ophelias Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -29,6 +29,8 @@ Habeo nostrum volutpat eum ad. Sea error reprimique ad, sumo altera liberavisse 
 
 Ne tale ipsum intellegam vis, aperiri detraxit no has. Per soleat persequeris ex, ullum ubique te ius, movet tempor petentium ad usu. Probatus intellegat intellegam ius ea, ei est aperiri atomorum. Id est augue suavitate contentiones, cum eripuit aliquam at. Tation aliquid principes est te. Mediocrem intellegam nam ne.
 </p></div>
+
+<button id="button" onclick="handleClick()">Boop</button>
 
 </body>
 
