added: click counter + heart img
ive added a click counter that keeps track of how many times the button has been clicked, at the 3rd click the popup alert changes and a heart image becomes visible beside the counter.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <li><a href="news.html">News</a></li>
     <li><a href="contact.html">Contact</a></li>
     <li><a href="about.html">About</a></li>
+    <li>Times booped:<a id="counter">0</a><img src="/Users/modestyopheliaaguilar/Documents/heart.png" style="visibility: hidden" id="heart" /></li> 
 </div>
 
 <div class="content">
@@ -30,7 +31,7 @@ Habeo nostrum volutpat eum ad. Sea error reprimique ad, sumo altera liberavisse 
 Ne tale ipsum intellegam vis, aperiri detraxit no has. Per soleat persequeris ex, ullum ubique te ius, movet tempor petentium ad usu. Probatus intellegat intellegam ius ea, ei est aperiri atomorum. Id est augue suavitate contentiones, cum eripuit aliquam at. Tation aliquid principes est te. Mediocrem intellegam nam ne.
 </p></div>
 
-<button id="button" onclick="handleClick()">Boop<br>Boop<br>Boop </button>
+<button id="btn" onclick="handleClick()">Boop<br>Boop<br>Boop</button>
 
 </body>
 
