heart img updated
the heart image path was broken in previous version, hopefully correcting that in this version.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <li><a href="news.html">News</a></li>
     <li><a href="contact.html">Contact</a></li>
     <li><a href="about.html">About</a></li>
-    <li>Times booped:<a id="counter">0</a><img src="/Users/modestyopheliaaguilar/Documents/heart.png" style="visibility: hidden" id="heart" /></li> 
+    <li>Times booped:<a id="counter">0</a><img src="/Users/modestyopheliaaguilar/Documents/GitHub/modestyophelia.github.io/images/heart1.png" style="visibility: hidden" id="heart" /></li> 
 </div>
 
 <div class="content">
