updated alerts + home page
updated the alerts for the fox snoot and text on home page

--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
 </div>
 
 <div class="content">
-<p>Lorem ipsum dolor sit amet, ut ignota accommodare duo, pro ea dolor essent eripuit. Nam inimicus adversarium in, sed facilisis ocurreret explicari in, summo sonet omnesque eos ne. Nemore conceptam definiebas eu usu. An insolens periculis eum, an nec laoreet singulis, ex mel adhuc mentitum probatus. Vel ut laudem erroribus prodesset.
+<p>Hi! <br><br>Youre on the Home-page. <br>
+I'll write a bunch of things here, sometime, maybe.<br><br>
+You should try clicking the fox's snoot meanwhile<br><br>
+Lorem ipsum dolor sit amet, ut ignota accommodare duo, pro ea dolor essent eripuit. Nam inimicus adversarium in, sed facilisis ocurreret explicari in, summo sonet omnesque eos ne. Nemore conceptam definiebas eu usu. An insolens periculis eum, an nec laoreet singulis, ex mel adhuc mentitum probatus. Vel ut laudem erroribus prodesset.
 
 Tota diceret nominati ius eu, error sonet simul his ut. Ignota impetus at mea, tation veritus praesent nec ne, mea eu esse inani definitiones. Et vel animal instructior delicatissimi, eu mel nonumes appetere hendrerit, ex idque fuisset democritum est. In ius dicit nobis nonumes, est ne dico audire. An minimum omnesque repudiare pri.
 
-Quot elitr te vis, mea no malis nihil. Harum doctus has an. Eam in idque iusto vocent. Omnis maiestatis adolescens mel ea, per primis vivendum ne, nec te saepe feugiat intellegam. Ad mea postea elaboraret, quo ne illum paulo equidem.
-
-Habeo nostrum volutpat eum ad. Sea error reprimique ad, sumo altera liberavisse ne quo, utamur dignissim assentior pri in. Duo te eius scripta. Id his veri accusata delicata. Ei sea semper possim tractatos, mutat nemore ut per.
-
-Ne tale ipsum intellegam vis, aperiri detraxit no has. Per soleat persequeris ex, ullum ubique te ius, movet tempor petentium ad usu. Probatus intellegat intellegam ius ea, ei est aperiri atomorum. Id est augue suavitate contentiones, cum eripuit aliquam at. Tation aliquid principes est te. Mediocrem intellegam nam ne.
+Quot elitr te vis, mea no malis nihil.
 </p></div>
 
 <button id="btn" onclick="handleClick()">Boop<br>Boop<br>Boop</button>
