--- a/index.html
+++ b/index.html
@@ -8,27 +8,34 @@
 <body>
 
 <div class="header">
-<h1>Ophelias Portfolio</h1>
-</div>
-
-<div class="nav">
-    <li><a href="index.html"><strong>Home</strong></a></li>
-    <li><a href="news.html">News</a></li>
-    <li><a href="contact.html">Contact</a></li>
-    <li><a href="about.html">About</a></li>
-    <li>Times booped:<a id="counter">0</a><img src="./heart123.png" style="visibility: hidden" id="heart" /></li> 
-</div>
+    <h1 class="title">Ophelia Aguilar</h1><br>
+        <h1 class="subtitle">I'm a programming student.</h1>
+    </div>
 
 <div class="content">
-<p>Hi! <br><br>Youre on the Home-page. <br>
-I'll write a bunch of things here, sometime, maybe.<br><br>
-You should try clicking the fox's snoot meanwhile<br><br>
-Lorem ipsum dolor sit amet, ut ignota accommodare duo, pro ea dolor essent eripuit. Nam inimicus adversarium in, sed facilisis ocurreret explicari in, summo sonet omnesque eos ne. Nemore conceptam definiebas eu usu. An insolens periculis eum, an nec laoreet singulis, ex mel adhuc mentitum probatus. Vel ut laudem erroribus prodesset.
+    Hello! My name is Ophelia. My fascination with programming first sparked when I began playing video games as a child. Programming felt like the natural next step in exploring my love for video games and what goes on behind the scenes.
+<br><br>In 2019 I started seriously exploring programming and built my first programs in Visual Studio, using C#. I loved how programming challenged my creativity and logical thinking, and how one problem could be solved in infinite ways.
+<br><br>Onwards I studied programming for one year at Kvinnofolkhögskolan, which only peaked my interest further. I had a short internship at Albert Schapiro Autonomo where I mainly focused on front-end web development of their website, using React.js<br><br>
+I’m now studying app development at Stockholms Tekniska Institut and looking forward to going into my second year.<br><br><br>
 
-Tota diceret nominati ius eu, error sonet simul his ut. Ignota impetus at mea, tation veritus praesent nec ne, mea eu esse inani definitiones. Et vel animal instructior delicatissimi, eu mel nonumes appetere hendrerit, ex idque fuisset democritum est. In ius dicit nobis nonumes, est ne dico audire. An minimum omnesque repudiare pri.
+<br><h2>During my studies I've built projects using:</h1><br>
+<li>C#</li> 
+<li>HTML</li>
+<li>CSS</li>
+<li>Java Script</li>
+<li>Java</li>
+<li>Kotlin</li><br><br>
+<li>React.js</li>
+<li>React Native</li><br><br><br>
 
-Quot elitr te vis, mea no malis nihil.
-</p></div>
+<div class="links">
+    <a href="ophelia aguilar cv_praktikplats.pdf" target="_blank"><h2>Resume</h1></a>
+    <a href="https://github.com/modestyophelia" target="_blank"><h2>GitHub</h1></a>
+        <a href="https://www.linkedin.com/in/modestyopheliaaguilar/" target="_blank"><h2>Linkedin</h1></a>
+</div><br><br><br><br><br><br><br>
+
+<small>Psst... Press the foxes nose. Times booped:<a id="counter"><small>0</small></a><img src="./heart123.png" style="visibility: hidden" id="heart" /></small>
+</div>
 
 <button id="btn" onclick="handleClick()">Boop<br>Boop<br>Boop</button>
 
