--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ I’m now studying app development at Stockholms Tekniska Institut and looking f
 <li>React Native</li><br><br><br>
 
 <div class="links">
-    <a href="ophelia aguilar cv_praktikplats.pdf" target="_blank"><h2>Resume</h1></a>
+    <a href="https://ophelia aguilar cv_praktikplats.pdf" target="_blank"><h2>Resume</h1></a>
     <a href="https://github.com/modestyophelia" target="_blank"><h2>GitHub</h1></a>
         <a href="https://www.linkedin.com/in/modestyopheliaaguilar/" target="_blank"><h2>Linkedin</h1></a>
 </div><br><br><br><br><br><br><br>
