--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
 
     </head>
     <body>
-    <embed src="Ophelia Aguilar CV_Praktikplats.pdf" width="1000px" height="1000px" />
+    <embed src="./Ophelia Aguilar CV_Praktikplats.pdf" width="1000px" height="1000px" />
 
 </body>
 
