--- a/resume.html
+++ b/resume.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-
-    </head>
-    <body>
-    <embed src="./Ophelia Aguilar CV_Praktikplats.pdf" width="1000px" height="1000px" />
-
-</body>
-
+  <head>
+    <title>Ophelias Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <embed
+      src="./Ophelia Aguilar CV_Praktikplats.pdf"
+      width="1000px"
+      height="1000px"
+    />
+  </body>
 </html>
 
-<script src='main.js'></script>
+<script src="main.js"></script>
