--- a/resume.html
+++ b/resume.html
@@ -5,11 +5,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <embed
-      src="./Ophelia Aguilar CV_Praktikplats.pdf"
-      width="1000px"
-      height="1000px"
-    />
+    <div>
+      <embed
+        src="./Ophelia Aguilar CV_Praktikplats.pdf"
+        width="1000px"
+        height="1000px"
+      />
+    </div>
   </body>
 </html>
 
