--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@ I’m now studying app development at Stockholms Tekniska Institut and looking f
 <li>React Native</li><br><br><br>
 
 <div class="links">
-    <a href="resume.html" target="_blank"></a><h2>Resume</h1></a>
-    <a href="/Users/modestyopheliaaguilar/Downloads/modestyophelia" target="_blank"><h2>GitHub</h1></a>
-        <a href="https://www.linkedin.com/in/modestyopheliaaguilar/" target="_blank"><h2>Linkedin</h1></a>
+    <a href="resume.html" target="_blank"><h2>Resume</h2></a>
+    <a href="/Users/modestyopheliaaguilar/Downloads/modestyophelia" target="_blank"><h2>GitHub</h2></a>
+    <a href="https://www.linkedin.com/in/modestyopheliaaguilar/" target="_blank"><h2>Linkedin</h2></a>
 </div><br><br><br><br><br><br><br>
 
 <small>Psst... Press the foxes nose. Times booped:<a id="counter"><small>0</small></a><img src="./heart123.png" style="visibility: hidden" id="heart" /></small>
