implemented closing button for resume

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ I’m now studying app development at Stockholms Tekniska Institut and looking f
 <small>Psst... Press the foxes nose. Times booped:<a id="counter"><small>0</small></a><img src="./heart123.png" style="visibility: hidden" id="heart" /></small>
 </div>
 
-<button id="btn" onclick="handleClick()">Boop<br>Boop<br>Boop</button>
+<button id="boopFoxBtn" onclick="boopFox()">Boop<br>Boop<br>Boop</button>
 
 </body>
 
