--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,16 @@
   </head>
   <body>
     <div>
+      <form>
+        <button
+          id="closeBtn"
+          type="submit"
+          formaction="https://modestyophelia.github.io"
+        >
+          Close Resume
+        </button>
+      </form>
+
       <embed
         src="./Ophelia Aguilar CV_Praktikplats.pdf"
         width="1000px"
