--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ I’m now studying app development at Stockholms Tekniska Institut and looking f
 
 <div class="links">
     <a href="resume.html"><h2>Resume</h2></a>
+    <a href="projects.html"><h2>Projects</h2></a>
     <a href="https://github.com/modestyophelia" target="_blank"><h2>GitHub</h2></a>
     <a href="https://www.linkedin.com/in/modestyopheliaaguilar/" target="_blank"><h2>Linkedin</h2></a>
 </div><br><br><br><br><br><br><br>
