add projects tab

--- a/projects.html
+++ b/projects.html
@@ -4,10 +4,20 @@
     <link rel="stylesheet" href="style.css" />
     <title>Ophelias Portfolio</title>
   </head>
+
+  <form>
+    <button
+      id="closeBtn"
+      type="submit"
+      formaction="https://modestyophelia.github.io">
+      Close Projects
+    </button>
+  </form>
   <div class="header">
     <h1 class="title">A few of my past projects:</h1>
   </div>
   <body>
+
     <h1 class="subtitle">Intergalactic Dating Simulator</h1>
     <div class="intergalacticDatingGame">
       <img
