update title placement

--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
   />
     <div class="content">Text about the project</div>
 
-    <h1 class="subtitle">Did Trump really say that?</h1>
+    <h1 class="subtitle">Did Trump actually say that?</h1>
     <div class="didTrumpReallySayThatGame">
       <img
         src="./Skärmavbild 2022-06-01 kl. 22.37.19.png"
