--- a/projects.html
+++ b/projects.html
@@ -5,79 +5,126 @@
     <title>Ophelias Portfolio</title>
   </head>
 
-  <body>
-  <form>
-    <button
-      id="closeBtn"
-      type="submit"
-      formaction="https://modestyophelia.github.io">
-      Close Projects
-    </button>
-  </form>
-  <div class="header">
-    <h1 class="title">A few of my past projects:</h1>
-  </div>
-    <h1 class="subtitle">Intergalactic Dating Simulator</h1>
-    <div class="intergalacticDatingGame">
+  <body class="projects">
+    <form>
+      <button
+        id="closeBtn"
+        type="submit"
+        formaction="https://modestyophelia.github.io"
+      >
+        Close Projects
+      </button>
+    </form>
+    <div class="projectHeader">
+      <h1 class="projectTitle">A few of my past projects:</h1>
+    </div>
+
+    <h1 class="projectSubtitle">Intergalactic Dating Simulator</h1>
+    <div class="projectPictures">
       <img
         src="./Screenshot 2022-08-03 at 19.21.20.png "
         width="600"
         height="400"
         id="Intergalactic Dating Game"
       />
+      <img
+        src="./Screenshot 2022-08-04 at 17.53.11.png "
+        width="600"
+        height="400"
+        id="Intergalactic Dating Game"
+      />
     </div>
-<div class="intergalacticDatingGame">
-    <img
-    src="./Screenshot 2022-08-03 at 19.21.20.png "
-    width="600"
-    height="400"
-    id="Intergalactic Dating Game"
-  />
-    <div class="content">Text about the project</div>
+    <div class="projectContent">
+      This is a text-based “choices matter” game that I had so much fun making.
+      It’s built using IntelliJ IDEA and Java. The original idea was to make a
+      combat game with a health bar, but I spun it around completely and made a
+      dating sim with a charm meter instead. The game has three possible
+      endings, depending on your charm meter score. Building this game allowed
+      for so much creativity, I had a blast while coming up with funny ideas of
+      what to implement. I see endless possibilities in the game and would love
+      to implement more crazy scenarios and ideas.
+    </div>
 
-    <h1 class="subtitle">Did Trump actually say that?</h1>
-    <div class="didTrumpReallySayThatGame">
+    <h1 class="projectSubtitle">Did Trump actually say that?</h1>
+    <div class="projectPictures">
       <img
         src="./Skärmavbild 2022-06-01 kl. 22.37.19.png"
-        width="220"
-        height="400"
-        id="DidTrumpReallySayThat"
+        width="250"
+        height="430"
+        id="didTrumpActuallySayThatGame"
       />
       <img
-      src="./Skärmavbild 2022-06-01 kl. 22.27.26.png"
-      width="220"
-      height="400"
-      id="DidTrumpReallySayThat"
-    />
-    <img
-    src="./Skärmavbild 2022-06-01 kl. 22.28.25.png"
-    width="220"
-    height="400"
-    id="DidTrumpReallySayThat"
-  />
-  </div>
-  
-  <div class="content">Text about the project</div>
+        src="./Skärmavbild 2022-06-01 kl. 22.27.26.png"
+        width="250"
+        height="430"
+        id="didTrumpActuallySayThatGame"
+      />
+      <img
+        src="./Skärmavbild 2022-06-01 kl. 22.28.25.png"
+        width="250"
+        height="430"
+        id="didTrumpActuallySayThatGame"
+      />
+    </div>
 
-  <h1 class="subtitle">What game should you try out next?</h1>
-    <div class="whatGameShouldYouTryOutNextQuiz">
+    <div class="projectContent">
+      This is a mobile app, built using Android Studio and Kotlin. Once again, I
+      had a blast making this quiz game. I got the app idea while casually
+      browsing the web and an ad pops up suggesting I should subscribe to a
+      newsletter with Donald Trump's craziest quote of the week. The app
+      presents you with one crazy quote after the other, and the player's job is
+      to figure out if Trump said it or not (the false Trump quotes are actually
+      Kanye West quotes).
+    </div>
+
+    <h1 class="projectSubtitle">What game should you try out next?</h1>
+    <div class="projectPictures">
       <img
         src="./quiz.png"
-        width="460"
-        height="400"
+        width="700"
+        height="260"
         id="whatGameShouldYouTryOutNext"
       />
-      <br><br>
+      <br /><br />
+      <br /><br /><br /><br />
+    </div>
+    <div class="projectPictures">
       <img
-      src="./Screenshot 2022-08-03 at 19.44.09.png"
-      width="500"
-      height="500"
-      id="whatGameShouldYouTryOutNext"
-    />
-
-    <div class="content">Text about the project</div>
-    <br><br><br><br>
-
+        src="./bioshockinfinitePic.2f6f904f.jpeg"
+        width="410"
+        height="250"
+        id="whatGameShouldYouTryOutNext"
+      />
+      <img
+        src="./franbowPic.dcc9c9de.jpeg"
+        width="410"
+        height="250"
+        id="whatGameShouldYouTryOutNext"
+      />
+    </div>
+    <div class="projectPictures">
+      <img
+        src="./hellbladePic.jpeg"
+        width="410"
+        height="250"
+        id="whatGameShouldYouTryOutNext"
+      />
+      <img
+        src="./rakuenPic.fab91649.jpeg"
+        width="410"
+        height="250"
+        id="whatGameShouldYouTryOutNext"
+      />
+    </div>
+    <div class="projectContent">
+      This is a hybrid app, built using Visual Studio Code and React Native.
+      Here I got the chance to combine both my passions and create something
+      through it – programming, and gaming. It’s a simple quiz that helps come
+      up with suggestions for what games you should try out next – based on your
+      answers. The four pictures above are the games that I implemented as
+      possible suggestions. I tried to pick a good mix of games, predominantly
+      indie games that not everybody has played.
+      <br /><br /><br />
     </div>
   </body>
 </html>
