--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
     <title>Ophelias Portfolio</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body class="resume">
     <div>
       <form>
         <button
