--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class = "home">
 <div class="header">
     <h1 class="title">Ophelia Aguilar</h1><br>
         <h1 class="subtitle">I'm a programming student.</h1>
