update for mobile optimization

--- a/projects.html
+++ b/projects.html
@@ -20,18 +20,18 @@
     </div>
 
     <h1 class="projectSubtitle">Intergalactic Dating Simulator</h1>
-    <div class="projectPictures">
+    <div class="projectPictures1">
       <img
         src="./Screenshot 2022-08-03 at 19.21.20.png "
         width="600"
         height="400"
-        id="Intergalactic Dating Game"
+        id="Intergalactic DatingGame"
       />
       <img
         src="./Screenshot 2022-08-04 at 17.53.11.png "
         width="600"
         height="400"
-        id="Intergalactic Dating Game"
+        id="IntergalacticDatingGame"
       />
     </div>
     <div class="projectContent">
@@ -46,7 +46,7 @@
     </div>
 
     <h1 class="projectSubtitle">Did Trump actually say that?</h1>
-    <div class="projectPictures">
+    <div class="projectPictures2">
       <img
         src="./Skärmavbild 2022-06-01 kl. 22.37.19.png"
         width="250"
@@ -78,7 +78,7 @@
     </div>
 
     <h1 class="projectSubtitle">What game should you try out next?</h1>
-    <div class="projectPictures">
+    <div class="projectPictures3">
       <img
         src="./quiz.png"
         width="700"
@@ -88,7 +88,7 @@
       <br /><br />
       <br /><br /><br /><br />
     </div>
-    <div class="projectPictures">
+    <div class="projectPictures3">
       <img
         src="./bioshockinfinitePic.2f6f904f.jpeg"
         width="410"
@@ -102,7 +102,7 @@
         id="whatGameShouldYouTryOutNext"
       />
     </div>
-    <div class="projectPictures">
+    <div class="projectPictures4">
       <img
         src="./hellbladePic.jpeg"
         width="410"
