--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
       </form>
 
       <embed
-        src="./Ophelia Aguilar CV_Praktikplats.pdf"
+        src="./Resume Ophelia Aguilar.pdf"
         width="1000px"
         height="1000px"
       />
