updated button design

--- a/index.html
+++ b/index.html
@@ -46,16 +46,10 @@ and looking forward to going into my second year.
     </div>
 
     <div class="links">
-      <a href="resume.html"><h2>Resume</h2></a>
-      <a href="projects.html"><h2>Projects</h2></a>
-      <a href="https://github.com/modestyophelia" target="_blank"
-        ><h2>GitHub</h2></a
-      >
-      <a
-        href="https://www.linkedin.com/in/modestyopheliaaguilar/"
-        target="_blank"
-        ><h2>Linkedin</h2></a
-      >
+      <a class= "btn1" href="resume.html"><h2>Resume</h2></a>
+      <a class= "btn2" href="projects.html"><h2>Projects</h2></a>
+      <a class= "btn3" href="https://github.com/modestyophelia" target="_blank"><h2>GitHub</h2></a>
+      <a class= "btn4" href="https://www.linkedin.com/in/modestyopheliaaguilar/" target="_blank"><h2>Linkedin</h2></a>
     </div>
 
     <small
