update button styles

--- a/resume.html
+++ b/resume.html
@@ -6,15 +6,8 @@
   </head>
   <body class="resume">
     <div>
-      <form>
-        <button
-          id="closeBtn"
-          type="submit"
-          formaction="https://modestyophelia.github.io"
-        >
-          Close Resume
-        </button>
-      </form>
+
+        <a class= "btn5" href="index.html"><h2>Close resume</h2></a>
 
       <embed
         src="./Resume Ophelia Aguilar.pdf"
