--- a/projects.html
+++ b/projects.html
@@ -6,16 +6,8 @@
   </head>
 
   <body class="projects">
-    <form>
-      <button
-        id="closeBtn"
-        type="submit"
-        formaction="https://modestyophelia.github.io"
-      >
-        Close Projects
-      </button>
-    </form>
-    <div class="projectHeader">
+      <a class= "btn6" href="index.html"><h2>Close projects</h2></a>
+      <div class="projectHeader">
       <h1 class="projectTitle">A few of my past projects:</h1>
     </div>
 
