--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,9 @@
   </head>
 
   <body class="projects">
+    <div class="links">
       <a class= "btn6" href="index.html"><h2>Close projects</h2></a>
+    </div>
       <div class="projectHeader">
       <h1 class="projectTitle">A few of my past projects:</h1>
     </div>
