--- a/resume.html
+++ b/resume.html
@@ -5,9 +5,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="resume">
+    <div class="links">
     <div>
 
         <a class= "btn5" href="index.html"><h2>Close resume</h2></a>
+        </div>
 
       <embed
         src="./Resume Ophelia Aguilar.pdf"
