adjust fox nose button

--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@ and looking forward to going into my second year.
       <div id="counter">0</div>
       <img src="./heart123.png" style="visibility: hidden" id="heart"
     /></small>
-    <button id="boopFoxBtn" onclick="boopFox()">Boop Boop Boop</button>
+    <button id="boopFoxBtn" onclick="boopFox()">
+      Boop 
+      Boop 
+      Boop</button>
   </body>
 </html>
 
