--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@ and looking forward to going into my second year.
       <img src="./heart123.png" style="visibility: hidden" id="heart"
     /></small>
     <button id="boopFoxBtn" onclick="boopFox()">
-      Boop 
-      Boop 
-      Boop</button>
+           
+           
+          </button>
   </body>
 </html>
 
