--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="projectContent">
-      This is a mobile app, built using Android Studio and Kotlin. Once again, I
+      This is a mobile app, built using Android Studio and Kotlin. I
       had a blast making this quiz game. I got the app idea while casually
       browsing the web and an ad pops up suggesting I should subscribe to a
       newsletter with Donald Trump's craziest quote of the week. The app
