added new project

--- a/projects.html
+++ b/projects.html
@@ -45,6 +45,23 @@
       Kanye West quotes).
     </div>
 
+    <h1 class="projectSubtitle">Tic Tac Toe</h1>
+    <div class="projectPictures5">
+      <img
+        src="./tictactoe.png "
+        width="320"
+        height="700"
+        id="tictactoe"
+      />
+    </div>
+    <div class="projectContent">
+      This is a simple and straightforward Tic Tac Toe app built in Xcode using Swift.
+      It's the first app I've built in Swift, so far I'm loving the language.
+      I'm already looking forward to building my next project using Swift.
+
+    </div>
+
+
     <h1 class="projectSubtitle">Intergalactic Dating Simulator</h1>
     <div class="projectPictures1">
       <img
