--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ and looking forward to going into my second year.
       <li>Kotlin</li>
       <li>React.js</li>
       <li>React Native</li>
+      <li>Swift</li>
     </div>
 
     <div class="links">
