--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
         </div>
 
       <embed
-        src="./Resume Ophelia Aguilar.pdf"
+        src="./Resume_Ophelia_Aguilar_Portfolio.pdf"
         width="1000px"
         height="1200px"
       />
