--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ In 2019 I started seriously exploring programming and built  my first programs i
       
 Onwards I studied programming for one year at Kvinnofolkhögskolan, which only peaked my interest further. I've interned at Albert Schapiro Autonomo and Capacio, where I mainly focused on front-end web development of their websites, using React.js 
       
-I’m now studying app development at Stockholms Tekniska Institut
+I’m currently studying app development at Stockholms Tekniska Institut
 and looking forward to earning my degree later this spring.
     </div>
     <div class="projectLanguagesTitle">
